# sinly_quant

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
docs/: index.md  installation.md  usage.md
src/sinly_quant/: constants.py  quickstart.ipynb  sinly_logger.py  util.py
src/sinly_quant/backtest/: demo_multi_timeframe_backtest.py  pair_ratio_backtest.py  strategy_history.csv
src/sinly_quant/data_prepare/: data_loaders.py  instruments_providers.py  ratio_calculator.py  ratio_universe.csv  run_ingestion.py  universe.csv
src/sinly_quant/data_prepare/data_source/: TR_GLD_1-DAY.csv  TR_GLD_1-WEEK.csv  TR_VTI-GLD_1-DAY.csv  TR_VTI-GLD_1-WEEK.csv  TR_VTI_1-DAY.csv  TR_VTI_1-WEEK.csv
src/sinly_quant/my_indicators/: my_ema_python.py  swing_levels.py
src/sinly_quant/strategies/: base_strategy.py  demo_strategy.py  pair_ratio.py
tests/: __init__.py  test_data_prepare.py  test_experiments.py  test_ind_swinglevel.py  test_ingestion_process.py  test_query_catalog.py  test_ratio_calculator.py  test_strategies.py
